refactor: Rename TimeFlow to FOCUS in index.html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<!-- TimeFlow v2.1 - Cache buster -->
+<!-- FOCUS v2.1 - Cache buster -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>TimeFlow - Focus & Productivity</title>
+    <title>FOCUS - Time Blocking & Productivity</title>
     <meta name="description" content="Master your day with focused time blocking and Pomodoro timer." />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#FF6B6B" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="TimeFlow" />
+    <meta name="apple-mobile-web-app-title" content="FOCUS" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <link rel="apple-touch-icon" href="/icon.svg" />
