fix: Add missing script tag to load React app - fixes blank screen

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- FOCUS v2.1 - Cache buster -->
+<!-- FOCUS v2.2 - Fixed missing script tag -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -19,25 +19,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script>
-      // Force cache clear on load
-      if ('caches' in window) {
-        caches.keys().then(names => {
-          names.forEach(name => caches.delete(name));
-        });
-      }
-      // Unregister old service workers
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.getRegistrations().then(registrations => {
-          registrations.forEach(reg => reg.unregister());
-        });
-        // Re-register after clearing
-        setTimeout(() => {
-          navigator.serviceWorker.register('/sw.js')
-            .then(reg => console.log('SW registered:', reg.scope))
-            .catch(err => console.log('SW failed:', err));
-        }, 1000);
-      }
-    </script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
