fix: Remove hardcoded manifest link, let VitePWA handle it

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<!-- FOCUS v2.2 - Fixed missing script tag -->
+<!-- FOCUS v2.3 - PWA manifest handled by VitePWA -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>FOCUS - Time Blocking & Productivity</title>
     <meta name="description" content="Master your day with focused time blocking and Pomodoro timer." />
-    <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#FF6B6B" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
